--- a/src/main/java/com/guis/MicrosLlinea.form
+++ b/src/main/java/com/guis/MicrosLlinea.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="locationByPlatform" type="boolean" value="true"/>
     <Property name="undecorated" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -61,7 +62,7 @@
                       <Component id="jLabel2" alignment="0" min="-2" pref="53" max="-2" attributes="0"/>
                       <Component id="jLabel4" min="-2" pref="53" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="121" max="32767" attributes="0"/>
+                  <EmptySpace min="121" pref="12" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -350,7 +351,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Hand Cursor"/>
+                  <Color id="Cursor Por defecto"/>
                 </Property>
               </Properties>
               <Events>
